--- a/html/index.html
+++ b/html/index.html
@@ -10,6 +10,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
+  
   <header class="p-3 text-bg-dark">
     <div class="container">
       <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
@@ -29,10 +30,11 @@
       </div>
     </div>
   </header>
-
-  <main>
-    <h1>Coding Reno</h1>
-  </main>
+  <div class="slideInFromTop">
+    <main>
+      <h1>Coding Reno</h1>
+    </main>
+  </div>
 <div class="slides">
   <div class="container marketing">
     <!-- START THE FEATURETTES -->
