--- a/html/join.html
+++ b/html/join.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <html lang="en">
 <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -30,3 +31,4 @@
     </div>
   </div>
 </header>
+</html>
