Scroll animations, fixed main centering.

--- a/html/index.html
+++ b/html/index.html
@@ -44,7 +44,7 @@
         <!-- START THE FEATURETTES -->
 
         <hr class="featurette-divider">
-        <div class="slideInFromLeft">
+        <div class="animate">
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading fw-normal lh-1">Simple, weekly based projects.<span class="text-body-secondary"></span></h2>
@@ -57,7 +57,7 @@
         </div>
 
         <hr class="featurette-divider">
-        <div class="slideInFromRight">
+        <div class="animate">
           <div class="row featurette">
             <div class="col-md-7 order-md-2">
               <h2 class="featurette-heading fw-normal lh-1">Find a community.<span class="text-body-secondary"></span></h2>
@@ -70,7 +70,7 @@
         </div>
 
         <hr class="featurette-divider">
-        <div class="slideInFromBottom">
+        <div class="animate">
           <div class="row featurette">
             <div class="col-md-7">
               <h2 class="featurette-heading fw-normal lh-1">Present every week.<span class="text-body-secondary"></span></h2>
