Created join form and about html

--- a/html/about.html
+++ b/html/about.html
@@ -17,11 +17,11 @@
           <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
             <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap"><use xlink:href="#bootstrap"></use></svg>
           </a>
-      
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a href="index.html" class="nav-link px-2 text-white">Home</a></li>
             <li><a href="about.html" class="nav-link px-2 text-white">About</a></li>
-            <li><a href="contact.html" class="nav-link px-2 text-white">Contact</a></li>
+            <li><a href="projects.html" class="nav-link px-2 text-white">Projects</a></li>
+            <li><a href="service.html" class="nav-link px-2 text-white">Service</a></li>
           </ul>
           <div class="text-end">
             <a href="join.html"><button type="button" class="btn btn-outline-light me-2">Join Now</button></a>
@@ -30,7 +30,12 @@
             </svg></button>
           </div>
         </div>
-      </header>   
+      </header> 
+      
+      <main>
+        <h1>About</h1>
+        <p>Coding Club Reno is a club for students who are interested in computer science and programming. We offer a variety of resources and opportunities for students to learn and grow in the field of computer science, and we mainly learn through solo or group projects. Our club is open to all students, regardless of their experience level. We believe that everyone should have the opportunity to learn about computer science and programming, and we are committed to providing a welcoming and inclusive environment for all of our members.</p>
+      </main>
       <footer>
         <p>&copy; 2024 Coding Club Reno &middot; <a href="#"></p>
       </footer>
