--- a/html/join.html
+++ b/html/join.html
@@ -21,7 +21,8 @@
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a href="index.html" class="nav-link px-2 text-white">Home</a></li>
             <li><a href="about.html" class="nav-link px-2 text-white">About</a></li>
-            <li><a href="contact.html" class="nav-link px-2 text-white">Contact</a></li>
+            <li><a href="projects.html" class="nav-link px-2 text-white">Projects</a></li>
+            <li><a href="service.html" class="nav-link px-2 text-white">Service</a></li>
           </ul>
           <div class="text-end">
             <a href="join.html"><button type="button" class="btn btn-outline-light me-2">Join Now</button></a>
@@ -30,7 +31,12 @@
             </svg></button>
           </div>
         </div>
-      </header>   
+      </header>
+      
+      <main>
+        <iframe class="application-form" src="https://docs.google.com/forms/d/e/1FAIpQLSe3hzQtLJwxzlH1TU7hm_kB3FisrdCoOcf5ujgGcjA4LQBXpg/viewform?embedded=true" width="640" height="991" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+      </main>
+
       <footer>
         <p>&copy; 2024 Coding Club Reno &middot; <a href="#"></p>
       </footer>
