Fixed smooth scrolling for all browsers.

--- a/html/service.html
+++ b/html/service.html
@@ -31,7 +31,18 @@
             </svg></button>
           </div>
         </div>
-      </header>   
+      </header>  
+      
+        <main class="service">
+          <div class="container">
+            <div class="row">
+              <div class="col">
+                <h1>Service</h1>
+                <p>Our club is dedicated to helping our community. We offer a variety of services to help you with your technical needs. Whether you need help with a website, or need help with a technical issue, we are here to help you.</p>
+              </div>
+            </div>
+        </main>
+
       <footer>
         <p>&copy; 2024 Coding Club Reno &middot; <a href="#"></p>
       </footer>
