--- a/html/about.html
+++ b/html/about.html
@@ -20,7 +20,7 @@
           <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
             <li><a href="index.html" class="nav-link px-2 text-white">Home</a></li>
             <li><a href="about.html" class="nav-link px-2 text-white">About</a></li>
-            <li><a href="projects.html" class="nav-link px-2 text-white">Projects</a></li>
+            <!--<li><a href="projects.html" class="nav-link px-2 text-white">Projects</a></li>-->
             <li><a href="service.html" class="nav-link px-2 text-white">Service</a></li>
           </ul>
           <div class="text-end">
