Added community picture

--- a/html/index.html
+++ b/html/index.html
@@ -66,7 +66,7 @@
               <p class="lead">Connect with us and find support on your programming journey.</p>
             </div>
             <div class="col-md-5 order-md-1">
-              <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+              <img src="/images/communitypic.jpg" alt="Community">
             </div>
           </div>
         </div>
@@ -89,11 +89,8 @@
       <!-- /END THE FEATURETTES -->
 
     </div><!-- /.container -->
-
-
     <footer>
       <p>&copy; 2024 Coding Club Reno &middot; <a href="#"></p>
     </footer>
-
   </body>
   </html>
