--- a/html/index.html
+++ b/html/index.html
@@ -53,7 +53,7 @@
               <p class="lead">We believe that project based learning is the best way to develop skill as a programmer. Sometimes we even involve ourselves in volunteer projects for our community!</p>
             </div>
             <div class="col-md-5">
-              <img src="/images/projectpic.jpg" alt="Community">
+              <img src="/images/projectpic.jpg" alt="Hand Tracking Project">
             </div>
           </div>
         </div>
@@ -79,7 +79,7 @@
               <p class="lead">After completing the weekly projects, we show what we made on a group call or in person.</p>
             </div>
             <div class="col-md-5">
-              <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-bg)"/><text x="50%" y="50%" fill="var(--bs-secondary-color)" dy=".3em">500x500</text></svg>
+              <img src="/images/presentpic.png" alt="Community">
             </div>
           </div>
         </div>
