--- a/html/service.html
+++ b/html/service.html
@@ -32,18 +32,17 @@
           </div>
         </div>
       </header>  
-      
         <main class="service">
           <div class="container">
             <div class="row">
               <div class="col">
                 <h1>Service</h1>
-                <p>Our club is dedicated to helping our community. We offer a variety of services to help you with your technical needs. Whether you need help with a website, or need help with a technical issue, we are here to help you.</p>
+                <p>Our club is dedicated to helping our community. We offer a variety of services to help local communities with their technical needs. Whether they need help with a website or a technical issue, we try our best to help.</p>
               </div>
             </div>
         </main>
-
       <footer>
+        <p id="contact-message">To contact us for community service please send a message to <a href="mailto:chasewestbusiness@gmail.com">our club</a>.</p>
         <p>&copy; 2024 Coding Club Reno &middot; <a href="#"></p>
       </footer>
     </body>
