--- a/html/service.html
+++ b/html/service.html
@@ -42,7 +42,7 @@
             </div>
         </main>
       <footer>
-        <p id="contact-message">To contact us for community service please send a message to <a href="mailto:chasewestbusiness@gmail.com">our club</a>.</p>
+        <p id="contact-message">To contact us for community service please send a message to <a href="mailto:theclub@codingreno.com">our club</a>.</p>
         <p>&copy; 2024 Coding Club Reno &middot; <a href="#"></p>
       </footer>
     </body>
