--- a/public_html/index.html
+++ b/public_html/index.html
@@ -8,7 +8,7 @@
   <script src="js/animations.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="icon" type="image/x-icon" href="/images/codingrenologo.png">
+  <link rel="icon" type="image/x-icon" href="images/codingrenologo.png">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -53,7 +53,7 @@
               <p class="lead">We believe that project based learning is the best way to develop skill as a programmer. Sometimes we even involve ourselves in volunteer projects for our community!</p>
             </div>
             <div class="col-md-5">
-              <img src="/images/projectpic.jpg" alt="Hand Tracking Project">
+              <img src="images/projectpic.jpg" alt="Hand Tracking Project">
             </div>
           </div>
         </div>
@@ -66,7 +66,7 @@
               <p class="lead">Connect with us and find support on your programming journey.</p>
             </div>
             <div class="col-md-5 order-md-1">
-              <img src="/images/communitypic.jpg" alt="Community">
+              <img src="images/communitypic.jpg" alt="Community">
             </div>
           </div>
         </div>
@@ -79,7 +79,7 @@
               <p class="lead">After completing the weekly projects, we show what we made on a group call or in person.</p>
             </div>
             <div class="col-md-5">
-              <img src="/images/presentpic.png" alt="Community">
+              <img src="images/presentpic.png" alt="Community">
             </div>
           </div>
         </div>
