updated meta tags

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Coding Club Reno is a community of programmers who believe in project-based learning and community service. Join us to learn and grow together!">
+  <meta name="keywords" content="coding, programming, community, projects, service, learning, club, reno, volunteer, development">
+  <meta name="author" content="Coding Club Reno">
+  <meta name="robots" content="index, follow">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <title>Coding Club Reno</title>
   <script src="js/dark-mode.js"></script>
   <script src="js/animations.js"></script>
