updated styling for about page

--- a/public_html/about.html
+++ b/public_html/about.html
@@ -41,8 +41,10 @@
       <main>
         <div class="about">
           <h1>About</h1>
-          <p>Coding Club Reno is a club for students who are interested in computer science and programming. We offer a variety of resources and opportunities for students to learn and grow in the field of computer science, and we mainly learn through solo or group projects. Our club is open to all students, regardless of their experience level. We believe that everyone should have the opportunity to learn about computer science and programming, and we are committed to providing a welcoming and inclusive environment for all of our members.</p>
-        </div>
+          <p>Coding Club Reno is a club for students who are interested in computer science and programming. We offer a variety of resources and opportunities for students to learn and grow in the field of computer science, and we mainly learn through solo or group projects. </p>
+            <p>Our club is open to all students, regardless of their experience level. We believe that everyone should have the opportunity to learn about computer science and programming, and we are committed to providing a welcoming and inclusive environment for all of our members.</p>
+        <img src="images/about.PNG">
+          </div>
           <div class="founders">
           </div>
       </main>
