--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Coding Club Reno</title>
+  <title>Coding Reno</title>
   <!-- Google Font - Using Inter for clean modern look -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <!-- Tailwind CSS -->
@@ -156,7 +156,7 @@
       <a href="#hero" class="relative z-10 text-xl sm:text-2xl font-semibold tracking-tight flex items-center">
         <span class="text-primary-600 dark:text-primary-400 mr-1">&#60;</span>
         <!-- Removed gradient-text class -->
-        <span class="text-primary-600 dark:text-primary-400">CodeClub Reno</span>
+        <span class="text-primary-600 dark:text-primary-400">Coding Reno</span>
         <span class="text-primary-600 dark:text-primary-400 ml-1">&#62;</span>
       </a>
       <div class="hidden md:flex items-center space-x-8">
@@ -364,7 +364,7 @@
         <p class="text-lg text-white/90 mb-8">Join our diverse community of developers, build projects, and grow your skills in a supportive environment.</p>
         <div class="flex flex-col sm:flex-row justify-center gap-4">
           <a href="join.html" class="pill-button inline-block px-8 py-3.5 bg-white text-primary-600 font-medium rounded-full shadow-lg hover:shadow-xl transition">
-            Join CodeClub Reno
+            Join Coding Reno
           </a>
           <a href="#projects" class="pill-button inline-block px-8 py-3.5 bg-white/10 border border-white/20 text-white font-medium rounded-full shadow hover:shadow-lg hover:bg-white/20 transition">
             Learn More
@@ -376,7 +376,7 @@
 
   <!-- Footer -->
   <footer class="py-12 text-center text-gray-600 dark:text-gray-400 text-sm">
-    <p>© <span x-text="new Date().getFullYear()"></span> Coding Club Reno. All rights reserved.</p>
+    <p>© <span x-text="new Date().getFullYear()"></span> Coding Reno. All rights reserved.</p>
   </footer>
 
   <!-- GSAP & Scroll Animations & Three.js Custom Code -->
