--- a/public_html/join.html
+++ b/public_html/join.html
@@ -158,7 +158,7 @@
     <div class="container mx-auto flex items-center justify-between px-6" :class="scrolled ? 'py-3' : 'py-5'">
       <a href="index.html" class="relative z-10 text-xl sm:text-2xl font-semibold tracking-tight flex items-center">
         <span class="text-primary-600 dark:text-primary-400 mr-1">&#60;</span>
-        <span class="text-primary-600 dark:text-primary-400">CodeClub Reno</span>
+        <span class="text-primary-600 dark:text-primary-400">Coding Reno</span>
         <span class="text-primary-600 dark:text-primary-400 ml-1">&#62;</span>
       </a>
       <div class="hidden md:flex items-center space-x-8">
@@ -198,7 +198,7 @@
         Join Our Community
       </div>
       <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold mb-6 text-gray-900 dark:text-white">
-        Become Part of <span class="text-primary-600 dark:text-primary-400">CodeClub Reno</span>
+        Become Part of <span class="text-primary-600 dark:text-primary-400">Coding Reno</span>
       </h1>
       <p class="text-lg md:text-xl mb-10 text-gray-600 dark:text-gray-300 max-w-2xl mx-auto">
         Ready to join our diverse community of developers? Fill out the form below to get started. We collaborate, learn, and grow our skills together in a supportive environment.
@@ -229,7 +229,7 @@
         <span class="inline-block px-3 py-1 rounded-full bg-primary-100 dark:bg-primary-900/30 text-primary-600 dark:text-primary-400 text-sm font-medium mb-4">Why Join Us</span>
         <h2 class="text-3xl md:text-4xl font-bold mb-4">Benefits of Membership</h2>
         <p class="text-lg text-gray-600 dark:text-gray-400 max-w-2xl mx-auto">
-          As a member of CodeClub Reno, you'll gain access to a variety of resources and opportunities
+          As a member of Coding Reno, you'll gain access to a variety of resources and opportunities
         </p>
       </div>
       
@@ -282,7 +282,7 @@
         <div>
           <h3 class="text-xl font-semibold mb-4 flex items-center">
             <span class="text-primary-400 mr-1">&#60;</span>
-            <span class="text-primary-400">CodeClub Reno</span>
+            <span class="text-primary-400">Coding Reno</span>
             <span class="text-primary-400 ml-1">&#62;</span>
           </h3>
           <p class="text-gray-400 mb-4">Building a community of developers in the Reno area through collaboration, education, and service.</p>
@@ -321,7 +321,7 @@
         </div>
       </div>
       <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-400 text-sm">
-        <p>&copy; 2025 CodeClub Reno. All rights reserved.</p>
+        <p>&copy; 2025 Coding Reno. All rights reserved.</p>
       </div>
     </div>
   </footer>
@@ -349,7 +349,7 @@
           </div>
           <h3 class="text-2xl font-bold mb-2">Application Submitted!</h3>
           <p class="text-gray-600 dark:text-gray-400 mb-6">
-            Thank you for your interest in joining CodeClub Reno. We've received your application and will be in touch shortly.
+            Thank you for your interest in joining Coding Reno. We've received your application and will be in touch shortly.
           </p>
           <button @click="showSuccess = false" class="pill-button px-8 py-2 bg-primary-500 hover:bg-primary-600 text-white font-medium rounded-full shadow-lg hover:shadow-xl transition">
             Close
