modify benefits of membership

--- a/public_html/join.html
+++ b/public_html/join.html
@@ -186,7 +186,7 @@
       <span>Toggle Theme</span>
       <div class="p-1.5 rounded-full bg-gray-200 dark:bg-gray-700">
         <svg x-show="!darkMode" xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" /></svg>
-        <svg x-show="darkMode" xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" /></svg>
+        <svg x-show="darkMode" xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" /></svg>
       </div>
     </button>
   </div>
@@ -234,41 +234,42 @@
       </div>
       
       <div class="grid md:grid-cols-3 gap-8">
-        <!-- Benefit Card 1 -->
+        <!-- Benefit Card 1: Community Focus -->
         <div class="solid-card p-6 hover-lift">
           <div class="w-12 h-12 mb-4 rounded-lg bg-primary-500 flex items-center justify-center text-white">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 20h5v-2a3 3 0 00-5.356-1.857M17 20H7m10 0v-2c0-.656-.126-1.283-.356-1.857M7 20H2v-2a3 3 0 015.356-1.857M7 20v-2c0-.656.126-1.283.356-1.857m0 0a5.002 5.002 0 019.288 0M15 7a3 3 0 11-6 0 3 3 0 016 0zm6 3a2 2 0 11-4 0 2 2 0 014 0zM7 10a2 2 0 11-4 0 2 2 0 014 0z" />
             </svg>
           </div>
-          <h3 class="text-xl font-semibold mb-2">Community Network</h3>
+          <h3 class="text-xl font-semibold mb-2">Connect & Collaborate</h3>
           <p class="text-gray-600 dark:text-gray-400 mb-4">
-            Connect with like-minded developers, from beginners to experts, and build lasting professional relationships.
+            Meet fellow students passionate about coding. Share ideas, work together on projects, and make new friends in a supportive and fun environment.
           </p>
         </div>
         
-        <!-- Benefit Card 2 -->
+        <!-- Benefit Card 2: Skill Building Focus -->
         <div class="solid-card p-6 hover-lift">
           <div class="w-12 h-12 mb-4 rounded-lg bg-primary-500 flex items-center justify-center text-white">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17.25v-.001M9.75 14.25v-.001M14.25 17.25v-.001M14.25 14.25v-.001M5.25 12h13.5M16.5 4.75h-9a2 2 0 0 0-2 2v10.5a2 2 0 0 0 2 2h9a2 2 0 0 0 2-2V6.75a2 2 0 0 0-2-2z" />
             </svg>
           </div>
-          <h3 class="text-xl font-semibold mb-2">Hands-On Learning</h3>
+          <h3 class="text-xl font-semibold mb-2">Learn & Create</h3>
           <p class="text-gray-600 dark:text-gray-400 mb-4">
-            Participate in real-world projects, code challenges, and workshops to develop practical skills employers value.
+            Explore coding basics, try out new technologies like web or game development, and work on exciting projects to build your skills and creativity.
           </p>
         </div>
 
+        <!-- Benefit Card 3: Exploration Focus -->
         <div class="solid-card p-6 hover-lift">
           <div class="w-12 h-12 mb-4 rounded-lg bg-primary-500 flex items-center justify-center text-white">
-            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 13.255A23.931 23.931 0 0112 15c-3.183 0-6.22-.62-9-1.745M16 6V4a2 2 0 00-2-2h-4a2 2 0 00-2 2v2m4 6h.01M5 20h14a2 2 0 002-2V8a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
-            </svg>
+             <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+               <path stroke-linecap="round" stroke-linejoin="round" d="M9.663 17h4.673M12 3v1m6.364 1.636l-.707.707M21 12h-1M4 12H3m3.343-5.657l-.707-.707m2.828 9.9a5 5 0 117.072 0l-.548.547A3.374 3.374 0 0014 18.469V19a2 2 0 11-4 0v-.531c0-.895-.356-1.754-.988-2.386l-.548-.547z" />
+             </svg>
           </div>
-          <h3 class="text-xl font-semibold mb-2">Career Opportunities</h3>
+          <h3 class="text-xl font-semibold mb-2">Explore Your Future</h3>
           <p class="text-gray-600 dark:text-gray-400 mb-4">
-            Get connected to local job opportunities, internships, and freelance projects through our industry partners.
+            Discover different areas of technology, gain skills valuable for college and future paths, and maybe even participate in coding challenges or events.
           </p>
         </div>
       </div>
