project showcase page

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -223,7 +223,7 @@
         <p class="text-gray-400 mb-4">
           Sharpen your problem-solving with algorithmic puzzles on Codewars, LeetCode, and HackerRank.
         </p>
-        <a href="#" class="inline-flex items-center text-primary-400 font-medium">
+        <a href="project-showcase.html#code-challenges" class="inline-flex items-center text-primary-400 font-medium">
           Learn more
           <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
@@ -240,7 +240,7 @@
         <p class="text-gray-400 mb-4">
           Build responsive, interactive websites using HTML, CSS, JavaScript, and frameworks like React and Vue.
         </p>
-        <a href="#" class="inline-flex items-center text-primary-400 font-medium">
+        <a href="project-showcase.html#website-projects" class="inline-flex items-center text-primary-400 font-medium">
           Learn more
           <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
@@ -255,7 +255,7 @@
         <p class="text-gray-400 mb-4">
           Dive into libraries like D3.js, Three.js, Tailwind CSS, and more to expand your toolkit and creativity.
         </p>
-        <a href="#" class="inline-flex items-center text-primary-400 font-medium">
+        <a href="project-showcase.html#library-explorations" class="inline-flex items-center text-primary-400 font-medium">
           Learn more
           <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 ml-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7" />
