fixed project showcase

--- a/public_html/project-showcase.html
+++ b/public_html/project-showcase.html
@@ -182,18 +182,6 @@
       </div>
       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
         <div class="solid-card p-6 hover-lift">
-          <h3 class="text-xl font-semibold mb-2">Three.js Particle System</h3>
-          <p class="text-gray-400 mb-4">Exploring particle effects and interactions using Three.js.</p>
-          <a href="#" target="_blank" class="inline-flex items-center text-primary-400 font-medium mr-4">Live Demo <span class="ml-1">→</span></a>
-          <a href="#" target="_blank" class="inline-flex items-center text-primary-400 font-medium">View Code <span class="ml-1">→</span></a>
-        </div>
-        <div class="solid-card p-6 hover-lift">
-          <h3 class="text-xl font-semibold mb-2">D3.js Data Visualization</h3>
-          <p class="text-gray-400 mb-4">Creating interactive charts and graphs with D3.js.</p>
-          <a href="#" target="_blank" class="inline-flex items-center text-primary-400 font-medium mr-4">Live Demo <span class="ml-1">→</span></a>
-          <a href="#" target="_blank" class="inline-flex items-center text-primary-400 font-medium">View Code <span class="ml-1">→</span></a>
-        </div>
-        <div class="solid-card p-6 hover-lift">
           <h3 class="text-xl font-semibold mb-2">Wordle Reinforcement Learning</h3>
           <p class="text-gray-400 mb-4">Implementing RL to solve Wordle in Python.</p>
           <a href="https://github.com/chase-west/Wordle-Reinforcement-Learning" target="_blank" class="inline-flex items-center text-primary-400 font-medium">View Repo <span class="ml-1">→</span></a>
@@ -202,6 +190,11 @@
           <h3 class="text-xl font-semibold mb-2">Hand Tracking Operations</h3>
           <p class="text-gray-400 mb-4">Exploring hand tracking and gesture recognition techniques.</p>
           <a href="https://github.com/chase-west/HandTrackingOperations" target="_blank" class="inline-flex items-center text-primary-400 font-medium">View Repo <span class="ml-1">→</span></a>
+        </div>
+        <div class="solid-card p-6 hover-lift">
+          <h3 class="text-xl font-semibold mb-2">Gravity Simulation</h3>
+          <p class="text-gray-400 mb-4">A simple gravity simulation implemented in Java.</p>
+          <a href="https://github.com/chase-west/GravitySim" target="_blank" class="inline-flex items-center text-primary-400 font-medium">View Repo <span class="ml-1">→</span></a>
         </div>
       </div>
     </div>
